binrw/tests/ui/invalid_try_map_return_type.stderr
error[E0308]: mismatched types
 --> tests/ui/invalid_try_map_return_type.rs:5:28
  |
5 |     #[br(try_map = |_: ()| 0)]
  |                            ^ expected `Result<i32, _>`, found integer
  |
  = note: expected enum `Result<i32, _>`
             found type `{integer}`
help: try wrapping the expression in a variant of `Result`
  |
5 |     #[br(try_map = |_: ()| Ok(0))]
  |                            +++ +
5 |     #[br(try_map = |_: ()| Err(0))]
  |                            ++++ +
